[gd_scene load_steps=15 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=2]
[ext_resource path="res://MessageLabel.gd" type="Script" id=3]
[ext_resource path="res://art/Name.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/slkscr.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/slkscr.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/slkscr.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/slkscr.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/slkscr.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 9 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 223.816
margin_top = 414.615
margin_right = 268.816
margin_bottom = 492.615
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
margin_left = 48.0811
margin_top = 210.245
margin_right = 442.081
margin_bottom = 245.245
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
script = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
margin_left = 18.0606
margin_top = 503.095
margin_right = 154.061
margin_bottom = 623.095
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start"
flat = true
align = 0

[node name="InstructionButton" type="Button" parent="."]
margin_left = 19.0347
margin_top = 592.666
margin_right = 285.035
margin_bottom = 631.666
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Instructions"
flat = true

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 32.4458
margin_top = 260.992
margin_right = 450.446
margin_bottom = 509.992
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Instructions

Movement 
wasd or arrow keys

Score
increments over time"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="Name" type="TextureRect" parent="."]
margin_left = 107.328
margin_top = 114.411
margin_right = 363.328
margin_bottom = 370.412
texture = ExtResource( 4 )
[connection signal="flip_color" from="." to="MessageLabel" method="_on_HUD_flip_color"]
[connection signal="flip_color" from="." to="ScoreLabel" method="_on_HUD_flip_color"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
